<resources>
    <string name="app_name">AndroidToolBox</string>
    <string name="login_title">Connexion</string>
    <string name="login_id">identifiant</string>
    <string name="login_motdepasse">Mot de passe</string>
    <string name="login_button">Valider</string>
    <string name="home_cycledelavie">Cycle de la vie</string>
    <string name="home_sauvegarde">Sauvegarde</string>
    <string name="home_permission">Permission</string>
    <string name="home_webservice">Webservices</string>
    <string name="login_pseudo">identifiant</string>
    <string name="cycle_de_vie" />
    <string name="deconnexion">Déconnexion</string>
    <string name="Formulaire">Veuillez remplir le formulaire</string>
    <string name="formulaireNom">Nom</string>
    <string name="formulaire_Prenom">Prénom</string>
    <string name="Buttun_Send">Sauvegarder</string>
    <string name="formulaire_Date">Date</string>
    <string name="Calendrier">"  "</string>
    <string name="contact_Contact">Accès aux informations Android</string>
    <string name="contact_de">Contact de Stéphanie MILANINI</string>
    <string name="home_bonjour">"  "</string>
    <string name="contact_Nom" />
    <string name="nomUser" />
    <string name="webAdapter_nom" />
    <string name="postaleAdress" />
    <string name="AdressEmail" />
    <string name="home_ble">Bluetooth</string>
    <string name="ble_Scan" />
    <string name="distance_ble" />
    <string name="nameBLE" />
    <string name="coordonneBle" />
    <string name="device_nom" />
    <string name="enfant_titre">Caracteristique Spécifique</string>
    <string name="deviceStatut" />
    <string name="lecture">Lecture</string>
    <string name="ecrire">Ecrire</string>
    <string name="notifier">Notifier</string>
    <string name="uuid">UUID :</string>
    <string name="propriete">Proprietés</string>
    <string name="Valeur">Valeur :</string>
    <string name="Propriete">"Proprieté : "</string>
    <string name="uuid2" />
    <string name="NomParent" />
    <string name="uuidE" />
    <string name="popUp">"Ecrire le message "</string>
    <string name="Button_sup">Supprimer</string>
    <string name="button_valider">Valider</string>
    <string name="cycleDevie">"Cycle De Vie "</string>
    <string name="nomprenomWebUser">Nom et Prénom :</string>
    <string name="valeurNom" />
    <string name="Adresse">Adresse :</string>
    <string name="streetnumber" />
    <string name="city" />
    <string name="state" />
    <string name="codePostal" />
    <string name="Email">Adresse Email :</string>
    <string name="DateBirth">Date de naissance et Age :</string>
</resources>
