<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#C3C3C3">

    <Button
        android:id="@+id/button_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:background="@drawable/border"
        android:text="@string/notifier"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button_ecriture"
        app:layout_constraintTop_toBottomOf="@+id/valeur"
        app:layout_constraintVertical_bias="0.087" />

    <TextView
        android:id="@+id/caract_spe"
        android:layout_width="421dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/cardview_dark_background"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/propriete"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Propriete"
        android:textColor="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="@id/uuidE"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/uuidE"
        app:layout_constraintTop_toBottomOf="@+id/uuidE" />

    <TextView
        android:id="@+id/valeur"
        android:layout_width="413dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/Valeur"
        android:textColor="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="@+id/propriete"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/propriete"
        app:layout_constraintTop_toBottomOf="@+id/propriete" />

    <Button
        android:id="@+id/button_lecture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:text="@string/lecture"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valeur"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_ecriture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:background="@drawable/border"
        android:text="@string/ecrire"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_lecture"
        app:layout_constraintTop_toBottomOf="@+id/valeur"
        app:layout_constraintVertical_bias="0.087" />

    <TextView
        android:id="@+id/uuidE"
        android:layout_width="408dp"
        android:layout_height="26dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caract_spe" />
</androidx.constraintlayout.widget.ConstraintLayout>