<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bleDeviceLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/distance"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/rond"
        android:text="@string/distance_ble"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titre"
        android:layout_width="142dp"
        android:layout_height="21dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="80dp"
        android:text="@string/nameBLE"
        android:textAlignment="center"
        android:textColor="@color/cardview_dark_background"
        app:layout_constraintStart_toEndOf="@+id/distance"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/coordonnee"
        android:layout_width="140dp"
        android:layout_height="29dp"
        android:layout_marginStart="28dp"
        android:text="@string/coordonneBle"
        android:textAlignment="center"
        android:textColor="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/distance"
        app:layout_constraintTop_toBottomOf="@+id/titre"
        app:layout_constraintVertical_bias="0.36" />
</androidx.constraintlayout.widget.ConstraintLayout>