<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/homeBonjour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:text="@string/home_bonjour"
        android:textColor="@color/cardview_dark_background"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageIsen"
        android:layout_width="253dp"
        android:layout_height="61dp"
        android:layout_marginTop="44dp"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoisen" />

    <TextView
        android:id="@+id/homeCDV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/home_cycledelavie"
        android:textAlignment="center"
        android:textColor="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cycledeVie" />

    <ImageButton
        android:id="@+id/sauvegarde"
        android:layout_width="83dp"
        android:layout_height="59dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/border"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toEndOf="@+id/cycledeVie"
        app:layout_constraintTop_toBottomOf="@+id/homeBonjour"
        app:srcCompat="@android:drawable/stat_notify_sdcard" />

    <ImageButton
        android:id="@+id/cycledeVie"
        android:layout_width="83dp"
        android:layout_height="59dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/border"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeBonjour"
        app:srcCompat="@android:drawable/stat_notify_chat" />

    <ImageButton
        android:id="@+id/webservices"
        android:layout_width="83dp"
        android:layout_height="59dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/border"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/permission"
        app:layout_constraintTop_toBottomOf="@+id/homeSauvegarde"
        app:srcCompat="@android:drawable/stat_sys_download_done" />

    <ImageButton
        android:id="@+id/permission"
        android:layout_width="83dp"
        android:layout_height="59dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/border"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeCDV"
        app:srcCompat="@android:drawable/stat_sys_speakerphone" />

    <TextView
        android:id="@+id/homeSauvegarde"
        android:layout_width="84dp"
        android:layout_height="19dp"
        android:layout_marginTop="8dp"
        android:text="@string/home_sauvegarde"
        android:textAlignment="center"
        android:textColor="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toEndOf="@+id/homeCDV"
        app:layout_constraintTop_toBottomOf="@+id/sauvegarde" />

    <TextView
        android:id="@+id/homePermission"
        android:layout_width="75dp"
        android:layout_height="17dp"
        android:layout_marginTop="8dp"
        android:text="@string/home_permission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permission" />

    <TextView
        android:id="@+id/homeWebService"
        android:layout_width="81dp"
        android:layout_height="18dp"
        android:layout_marginTop="8dp"
        android:text="@string/home_webservice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/homePermission"
        app:layout_constraintTop_toBottomOf="@+id/webservices" />

    <Button
        android:id="@+id/homeDeconexion"
        android:layout_width="113dp"
        android:layout_height="50dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/border"
        android:text="@string/deconnexion"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/webservices"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="@+id/permission" />

    <ImageButton
        android:id="@+id/Ble_Button"
        android:layout_width="85dp"
        android:layout_height="65dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toTopOf="@+id/homeDeconexion"
        app:layout_constraintEnd_toEndOf="@+id/webservices"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/permission"
        app:layout_constraintTop_toBottomOf="@+id/homePermission"
        app:srcCompat="@android:drawable/stat_sys_data_bluetooth" />

    <TextView
        android:id="@+id/homeBle"
        android:layout_width="79dp"
        android:layout_height="22dp"
        android:layout_marginTop="12dp"
        android:text="@string/home_ble"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/Ble_Button"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="@+id/Ble_Button"
        app:layout_constraintTop_toBottomOf="@+id/Ble_Button" />
</androidx.constraintlayout.widget.ConstraintLayout>